# VedisoftInternship

./: .clang-format  .gitignore  CMakeLists.txt  Testcases.md  VedisoftInternship.pro  architecture.md  main.cpp  qml.qrc  testTemplate.cpp.in  touchTemplate.cpp.in
cmakeTemplates/: deffwd_testValues.hpp.in  testMainFileTemplate.cpp.in
impl/: ConfigLoader.cpp  ConfigLoader.hpp  Deffwd.hpp  LogMsg.cpp  LogMsg.hpp  LogMsgState.hpp
qml/: main.qml
qml/entities/: Card.qml  ErrorDialog.qml  ErrorSplash.qml
src/: AppEngine.cpp  AppEngine.hpp  Deffwd.hpp  MarshalJson.cpp  MarshalJson.hpp  PropertyGenerator.hpp  constant.hpp  deffwd.hpp  utils.hpp
src/ConfigLoader/: ConfigCache.hpp  ConfigLoader.cpp  ConfigLoader.hpp
src/DBLink/: DBLink.cpp  DBLink.hpp  DBLinkExecutor.hpp
src/Logger/: Logger.cpp  Logger.hpp  LoggerConfig.hpp
src/MarshalJson/: MarshalJson.cpp  MarshalJson.hpp  MarshalJsonUtils.hpp
src/NetManager/: NetManager.cpp  NetManager.hpp  NetManagerConfig.hpp
src/configLoader/: ConfigCache.cpp  ConfigCache.hpp  ConfigLoader.cpp  ConfigLoader.hpp
src/entities/: Card.hpp  Provider.hpp  aggregates.hpp  entitiesSupport.cpp  qHashSupport.cpp
src/logger/: Logger.cpp
src/models/: ModelProviderCard.cpp  ModelProviderCard.hpp
test/: MarshalJson.cpp
testValues/: deffwd_testValues.hpp  json.hpp  values.hpp
testValues/fileInput/: jsonSrcAdvanced.json  jsonSrcError.json  jsonSrcInvalid.json
testingProj/: gtest_dependency.pri  main.cpp  test.cpp  testingProj.pro
testingProj/fileInput/: jsonSrc.json
tests/: loger.cpp  loger_main.cpp
tests/DB/: DB_main.cpp  DB_test.cpp
tests/Json/: Json_test.cpp
testsTouch/: MarshalJson.cpp
testsTouch/qmlModelData/: main.cpp  main.qml
touchSubproj/CardQmlBuild/: CardQmlBuild.pro  main.cpp  main.qml  qml.qrc
touchSubproj/DB/: DB_touch.cpp
touchSubproj/Json/: Json_touch.cpp
touchSubproj/Json/fileInput/: jsonSrc.json  jsonSrcNet.json  jsonSrc_error.json
touchSubproj/Logger/: Logger_touch.cpp
touchTests/: ConfigLoader_Logger.cpp  MarshalJson.cpp
